@@ -5,6 +5,7 @@ Post-release
 Fix LeScienze.it
 Fix LeTelegramme.fr (css)
 Fix The Athletic (timing)
+Fix Times of India (amp-images)
 
 * v3.2.1.0 (2023-06-05)
 Add Boersen-zeitung.de
